package cli_test

import (
	"fmt"
	"testing"

	clitestutil "github.com/cosmos/cosmos-sdk/testutil/cli"
	banktypes "github.com/cosmos/cosmos-sdk/x/bank/types"
	"github.com/stretchr/testify/require"
	tmcli "github.com/tendermint/tendermint/libs/cli"
	"google.golang.org/grpc/status"

	"github.com/strangelove-ventures/noble/v3/testutil/network"
	"github.com/strangelove-ventures/noble/v3/testutil/nullify"
	"github.com/strangelove-ventures/noble/v3/x/tokenfactory/client/cli"
	"github.com/strangelove-ventures/noble/v3/x/tokenfactory/types"
)

func networkWithMintingDenomObjects(t *testing.T) (*network.Network, types.MintingDenom) {
	t.Helper()
	cfg := network.DefaultConfig()
	state := types.GenesisState{}
	require.NoError(t, cfg.Codec.UnmarshalJSON(cfg.GenesisState[types.ModuleName], &state))

	testDenom := "test"

	state.MintingDenom = &types.MintingDenom{
		Denom: testDenom,
	}

	bankState := banktypes.DefaultGenesisState()
	bankState.DenomMetadata = []banktypes.Metadata{{
		Base: testDenom,
	}}

	buf, err := cfg.Codec.MarshalJSON(bankState)
	require.NoError(t, err)
	cfg.GenesisState[banktypes.ModuleName] = buf

	buf, err = cfg.Codec.MarshalJSON(&state)
	require.NoError(t, err)
	cfg.GenesisState[types.ModuleName] = buf

	return network.New(t, cfg), *state.MintingDenom
}

func TestShowMintingDenom(t *testing.T) {
	net, obj := networkWithMintingDenomObjects(t)

	ctx := net.Validators[0].ClientCtx
	common := []string{
		fmt.Sprintf("--%s=json", tmcli.OutputFlag),
	}
	for _, tc := range []struct {
		desc string
		args []string
		err  error
		obj  types.MintingDenom
	}{
		{
			desc: "get",
			args: common,
			obj:  obj,
		},
	} {
		t.Run(tc.desc, func(t *testing.T) {
			var args []string
			args = append(args, tc.args...)
			out, err := clitestutil.ExecTestCLICmd(ctx, cli.CmdShowMintingDenom(), args)
			if tc.err != nil {
				stat, ok := status.FromError(tc.err)
				require.True(t, ok)
				require.ErrorIs(t, stat.Err(), tc.err)
			} else {
				require.NoError(t, err)
				var resp types.QueryGetMintingDenomResponse
				require.NoError(t, net.Config.Codec.UnmarshalJSON(out.Bytes(), &resp))
				require.NotNil(t, resp.MintingDenom)
				require.Equal(t,
					nullify.Fill(&tc.obj),
					nullify.Fill(&resp.MintingDenom),
				)
			}
		})
	}
}
